[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/GameMenu/GameMenu.gd" type="Script" id=1]

[node name="GameMenu" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.156863, 0.156863, 0.784314 )

[node name="Main" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="PanelContainer" parent="Main"]
margin_left = 505.0
margin_top = 293.0
margin_right = 519.0
margin_bottom = 307.0

[node name="Layout" type="VBoxContainer" parent="Main/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 123.0
margin_bottom = 101.0

[node name="Label" type="Label" parent="Main/Panel/Layout"]
margin_right = 116.0
margin_bottom = 14.0
text = "Game Menu"

[node name="HSeparator" type="HSeparator" parent="Main/Panel/Layout"]
margin_top = 18.0
margin_right = 116.0
margin_bottom = 22.0

[node name="Resume" type="Button" parent="Main/Panel/Layout"]
margin_top = 26.0
margin_right = 116.0
margin_bottom = 46.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../ToDesktop")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../ToMain")
focus_next = NodePath("../ToMain")
focus_previous = NodePath("../ToDesktop")
text = "Resume"

[node name="ToMain" type="Button" parent="Main/Panel/Layout"]
margin_top = 50.0
margin_right = 116.0
margin_bottom = 70.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Resume")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../ToDesktop")
focus_next = NodePath("../ToDesktop")
focus_previous = NodePath("../Resume")
text = "Quit To Main"

[node name="ToDesktop" type="Button" parent="Main/Panel/Layout"]
margin_top = 74.0
margin_right = 116.0
margin_bottom = 94.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../ToMain")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Resume")
focus_next = NodePath("../Resume")
focus_previous = NodePath("../ToMain")
text = "Quit To Desktop"

[connection signal="about_to_show" from="." to="." method="_on_about_to_show"]
[connection signal="pressed" from="Main/Panel/Layout/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Main/Panel/Layout/ToMain" to="." method="_on_ToMain_pressed"]
[connection signal="pressed" from="Main/Panel/Layout/ToDesktop" to="." method="_on_ToDesktop_pressed"]
